--- a/app/src/main/res/menu/recipe_menu.xml
+++ b/app/src/main/res/menu/recipe_menu.xml
@@ -6,4 +6,8 @@
         android:title="@string/product"
         android:icon="@drawable/ic_products"
         app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/item_export_recipes"
+        android:title="@string/recipe_export"
+        app:showAsAction="never" />
 </menu>
