fix and features

--- a/app/src/main/res/menu/recipe_item_menu.xml
+++ b/app/src/main/res/menu/recipe_item_menu.xml
@@ -8,4 +8,7 @@
         android:id="@+id/item_delete"
         android:title="@string/label_delete"
         android:icon="@drawable/ic_delete" />
+    <item
+        android:id="@+id/item_export"
+        android:title="@string/label_export" />
 </menu>
