--- a/app/src/main/res/layout/fragment_edit_grocerie.xml
+++ b/app/src/main/res/layout/fragment_edit_grocerie.xml
@@ -3,9 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-
-    android:gravity="bottom"
+    android:layout_height="wrap_content"
     >
 
     <LinearLayout
